# app_black

./: .pdm.toml  .pre-commit-config.yaml  BoneIO.service  MANIFEST.in  README.md  create_dist.sh  install_script.py  install_script.sh  mypy.ini  pyproject.toml  requirements.txt  requirements_short.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yaml
boneio/: __init__.py  bonecli.py  const.py  cover.py  manager.py  modbus.py  mqtt_client.py  oled.py  runner.py  schema.yaml  version.py
boneio/example_config/: adc.yaml  binary_sensor.yaml  config.yaml  cover.yaml  event.yaml  input.yaml  led32x4A.yaml  output24x16A.yaml  output24x16A_v0.3.yaml  output32x5A.yaml
boneio/group/: __init__.py  output.py
boneio/helper/: __init__.py  async_updater.py  click_timer.py  config.py  events.py  exceptions.py  filter.py  gpio.py  ha_discovery.py  loader.py  logger.py  mqtt.py  oled.py  pcf8575.py  queue.py  state_manager.py  stats.py  timeperiod.py  util.py  yaml.py  yaml_util.py
boneio/helper/ds2482/: __init__.py  onewire.py
boneio/helper/onewire/: W1ThermSensor.py  __init__.py  ds2482.py  onewire.py
boneio/helper/sensor/: ina_219_smbus.py
boneio/input/: __init__.py  gpio.py  gpio_beta.py  gpio_new.py
boneio/relay/: __init__.py  basic.py  gpio.py  mcp.py  pca.py  pcf.py
boneio/schema/: actions.yaml  actions_sensor.yaml  actions_switch.yaml  filters.yaml  filters_adc.yaml  id.yaml  schema.yaml  temp_unit.yaml  update_interval.yaml
boneio/sensor/: __init__.py  adc.py  gpio.py  gpio_beta.py  gpio_new.py  ina219.py  lm75.py  sdm630.py
boneio/sensor/modbus/: __init__.py  dts1964-3.json  dts1964_3f.json  pt100.json  r4dcb08.json  sdm120.json  sdm630.json  socomec_e23.json  sofar.json
boneio/sensor/temp/: __init__.py  dallas.py  lm75.py  mcp9808.py
example_config/: config.yaml  output24x16A.yaml  output32x5A.yaml
tests/: 32_5_config.yaml  relay_32_5.py
