[project]
name = "boneIO"
description="Python App for BoneIO"
readme = "README.md"
dynamic = ["version"]
authors = [
    {name = "Paweł Szafer", email = "pszafer@gmail.com"},
]
dependencies = [
    "Adafruit-Blinka>=8.0.2",
    "adafruit-circuitpython-ds18x20>=1.3.12",
    "adafruit-circuitpython-mcp230xx>=2.5.5",
    "adafruit-circuitpython-mcp9808>=3.3.14",
    "adafruit-circuitpython-pct2075>=1.1.14",
    "asyncio-mqtt>=0.12.1",
    "Cerberus>=1.3.4",
    "colorlog>=6.6.0",
    "gpio>=0.3.0",
    "luma.core>=2.3.1",
    "luma.oled>=3.8.1",
    "pymodbus>=2.5.3",
    "pyserial-asyncio>=0.6",
    "PyYAML>=6.0",
    "Adafruit-BBIO>=1.2.0",
    "psutil>=5.9.1",
    "adafruit-circuitpython-onewire>=2.0.1",
    "w1thermsensor[async]>=2.0.0",
]
requires-python = ">=3.7"
license = {text = "GNU General Public License v3.0"}

[project.urls]
Homepage = "https://boneio.eu"
Repository = "https://github.com/boneIO-eu/app_bbb"
Documentation = "https://boneio.eu/docs/intro/"
Changelog = "https://github.com/boneIO-eu/app_bbb/releases"

[project.scripts]
boneio = "boneio.bonecli:main"

[project.optional-dependencies]
[tool.pdm]
version = {from = "boneio/version.py"}
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "pre-commit>=2.19.0",
    "flake8>=4.0.1",
    "bandit>=1.7.4",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | pdm/_vendor
  | tests/fixtures
)/
'''

[tool.isort]
profile = "black"
atomic = true
filter_files = true
known_first_party = ["boneio"]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
