[project]
name = "boneIO"
description="Python App for BoneIO"
readme = "README.md"
dynamic = ["version"]
authors = [
    {name = "Paweł Szafer", email = "pszafer@gmail.com"},
]
dependencies = [
    "Adafruit-Blinka>=8.19.0",
    "adafruit-circuitpython-ds18x20>=1.3.16",
    "adafruit-circuitpython-mcp230xx>=2.5.9",
    "adafruit-circuitpython-mcp9808>=3.3.19",
    "adafruit-circuitpython-pct2075>=1.1.18",
    "asyncio-mqtt>=0.16.1",
    "Cerberus>=1.3.4",
    "colorlog>=6.7.0",
    "gpio>=1.0.0",
    "luma-core>=2.4.0",
    "luma-oled>=3.12.0",
    "pymodbus>=2.5.3",
    "pyserial-asyncio>=0.6",
    "PyYAML>=6.0",
    "Adafruit-BBIO>=1.2.0",
    "psutil>=5.9.5",
    "adafruit-circuitpython-onewire>=2.0.4",
    "w1thermsensor[async]>=2.0.0",
    "adafruit-circuitpython-pca9685>=3.4.8",
]
requires-python = ">=3.7"
license = {text = "GNU General Public License v3.0"}

[project.urls]
Homepage = "https://boneio.eu"
Repository = "https://github.com/boneIO-eu/app_bbb"
Documentation = "https://boneio.eu/docs/intro/"
Changelog = "https://github.com/boneIO-eu/app_bbb/releases"

[project.scripts]
boneio = "boneio.bonecli:main"

[project.optional-dependencies]
[tool.pdm]
version = {from = "boneio/version.py"}
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.11.5",
    "pre-commit>=2.21.0",
    "flake8>=5.0.4",
    "bandit>=1.7.5",
    "setuptools>=67.7.2",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | pdm/_vendor
  | tests/fixtures
)/
'''

[tool.isort]
profile = "black"
atomic = true
filter_files = true
known_first_party = ["boneio"]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
